name:                shtuki
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/shtuki#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
                     , Types
                     , Db
                     , Api
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-server
                     , aeson
                     , aeson-compat
                     , lucid
                     , blaze-html
                     , blaze-markup
                     , warp
                     , directory
                     , wai
                     , base-compat
                     , mtl
                     , http-media
                     , time
                     , string-conversions
                     , bytestring
                     , attoparsec
                     , hasbolt
                     , text
                     , containers
                     , transformers
                     , resource-pool
                     , transformers-base
                     , monad-control
                     , monad-time
                     , log-base
                     , data-default
                     , wai-extra
  default-language:    Haskell2010

executable shtuki-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shtuki

  default-language:    Haskell2010

test-suite shtuki-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shtuki
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/shtuki
