name:                shtuki
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/shtuki#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config
                     , Models
                     , Api
                     , Api.User
                     , Logger

  build-depends:       base >= 4.9 && < 5.0
                     , aeson
                     , bytestring
                     , monad-control
                     , monad-logger
                     , mtl
                     , servant >= 0.11 && < 0.12
                     , servant-js >= 0.9 && < 0.10
                     , servant-server >= 0.11 && < 0.12
                     , transformers
                     , wai
                     , wai-extra
                     , warp
                     , text
                     , monad-metrics
                     , ekg
                     , wai-middleware-metrics
                     , microlens
                     , containers
                     , ekg-core
                     , katip >= 0.5.0.2 && < 0.6
                     , fast-logger
                     , hasbolt
                     , resource-pool
                     , data-default
  default-language:    Haskell2010

executable shtuki-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shtuki
                     , safe
                     , ekg
                     , ekg-core
                     , wai-middleware-metrics
                     , warp
                     , microlens
                     , monad-metrics

  default-language:    Haskell2010

test-suite shtuki-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shtuki
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/shtuki
